# GEM-rs

./: Cargo.toml  README.md
.github/workflows/: docs.yml
src/: lib.rs  main.rs  preferences.rs  rendering.rs  sensors.rs  timer.rs
