[package]
edition = "2021"
name = "greenhouse-rs"
version = "0.1.0"
license = "MIT"
authors = ["QPCrummer"]

[dependencies]
embedded-hal = { version = "1.0.0" }

defmt = "0.3"
defmt-rtt = "0.4"
cortex-m-rt = "0.7.5"
panic-probe = { version = "0.3", features = ["print-defmt"] }
i2c-pio = "0.8.0"
bme680 = { git = "https://github.com/marcelbuesing/bme680" }
embedded-timers = "0.3.0"
heapless = { version = "0.8.0", features = ["ufmt"] }
hd44780-driver = {git = "https://github.com/JohnDoneth/hd44780-driver"}
ufmt = "0.2.0"
rp-pico = "0.9"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3

